--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
-
+    <link rel="stylesheet" href="./css/small-screen-devices.css" media="only screen and (max-width:1300px)">
     <title>Snap - Make remote work</title>
+
 </head>
 <body>
 <header class="header">
+    <img class="header__image" src="./images/logo.svg" alt="snap-logo">
     <nav class="navbar">
-        <img class="header__image" src="./images/logo.svg" alt="snap-logo">
         <ul class="navbar__list">
             <li class="navbar__item navbar__item--arrows button st close">
                 <span class="close">Features</span>
@@ -43,17 +45,16 @@
             </li>
             <li class="navbar__item">Careers</li>
             <li class="navbar__item button">About</li>
-
         </ul>
+        <div class="navbar__log">
+            <a class="navbar__item button" href="#">Login</a>
+            <button class="navbar__item navbar__item--register button">Register</button>
+        </div>
     </nav>
-    <div>
-        <a class="navbar__item button" href="#">Login</a>
-        <button class="navbar__item navbar__item--register button">Register</button>
-    </div>
 </header>
+<div class="burger-menu"></div>
 <section>
     <div class="left-part">
-
         <h1 class="left-part__title">Make <br> remote work</h1>
         <p class="left-part__description">Get your team in sync, no matter your location. <br>
             Streamline processes, create team rituals, and <br>
@@ -72,5 +73,9 @@
 
 
 <script src="./js/index.js"></script>
+<script src="./js/small-screen-devices.js"></script>
+
+
 </body>
+
 </html>
